fixed bugs on mobile with slider

--- a/src/Components/Slider/Slide.module.scss
+++ b/src/Components/Slider/Slide.module.scss
@@ -4,6 +4,7 @@
 		position: relative;
 		display: flex;
 		flex-direction: column;
+		height: auto;
 	
 		.mainText {
 			position: relative;
@@ -20,11 +21,60 @@
 		}
 	
 		img {
-			object-fit: cover;
+			object-fit:cover;
 			object-position: center;
 			width: 100%;
 			height: 200px;
 		}
+	}
+}
+
+@media (max-width: 992px){
+	.slideWrapper {
+		height: auto;
+
+		img {
+			object-fit:scale-down;
+			object-position: center;
+			width: 100%;
+			height: 200px;
+		}
+	}
+}
+
+@media (max-width: 400px){
+	.slideWrapper {
+		height: 180px;
+	}
+}
+
+@media (min-width:401px) and (max-width: 500px){
+	.slideWrapper {
+		height: 190px;
+	}
+}
+
+@media (min-width:501px) and (max-width: 600px){
+	.slideWrapper {
+		height: 200px;
+	}
+}
+
+@media (min-width:601px) and (max-width: 700px){
+	.slideWrapper {
+		height: 215px;
+	}
+}
+
+@media (min-width:701px) and (max-width: 800px){
+	.slideWrapper {
+		height: 240px;
+	}
+}
+
+@media (min-width:801px) and (max-width: 900px){
+	.slideWrapper {
+		height: 260px;
 	}
 }
 
@@ -44,6 +94,10 @@
 			max-width: 40%;
 		}
 
+		.mainTextMobile{
+			display: none;
+		}
+
 		.subText {
 			position: absolute;
 			left: 10%;
@@ -52,6 +106,10 @@
 			font-weight: 500;
 			padding: 0.4em 0.4em;
 			display:block;
+		}
+
+		.subTextMobile{
+			display: none;
 		}
 
 		img {
