--- a/src/Components/SliderBtn/SliderBtn.module.scss
+++ b/src/Components/SliderBtn/SliderBtn.module.scss
@@ -22,7 +22,7 @@
     left: 2px;
 
     img{
-        rotate: -180deg;
+        transform: rotate(-180deg);
     }
 }
 
